<resources>
    <string name="app_name">腾讯视频</string>
    <string name="msg_lib_look_detail">查看</string>
    <string name="msg_lib_btn_ok">确定</string>
    <string name="msg_lib_cancel">取消</string>
    <string name="msg_lib_video_title">视频</string>
    <string name="msg_lib_album_title">相册</string>
    <string name="msg_lib_video_summary">视频关注内容更新</string>
    <string name="msg_lib_album_summary">相册上传图片</string>
    <string name="msg_lib_upload_photo_more">{0}上传了新照片</string>
    <string name="msg_lib_upload_photo_signal">{0}上传了{1}张照片</string>
    <string name="msg_lib_version_upgrade_tip">您当前版本不支持该消息,请升级你的版本</string>
    <string name="msg_lib_msg_list_empty">暂无消息～</string>
    <string name="msg_lib_network_disconnect">请检查网络～</string>
    <string name="msg_lib_tips_notification">点击OK键进入</string>
    <string name="action_settings">Settings</string>
    <string name="power_off">关机</string>
    <string name="reboot">重启</string>
    <string name="cancel">取消</string>
    <string name="upgrade_look_txt">查看</string>
    <string name="upgrade_now_txt">马上升级</string>
    <string name="upgrade_hint_title">有新版本了！</string>
    <string name="upgrade_hint_content_txt">现有%1$s版本可供更新，如有需要请前往更新您的版本吧~</string>
    <string name="upgrade_content_title_txt">新版本1.0.5</string>
    <string name="upgrade_content_txt">盒子升级后需要的软件我做了整合:</string>
    <string name="activity_media_center">网络已经断开</string>
    <string name="open">重新设置</string>
    <string name="wait">稍后再说</string>
    <string name="file_scanner">文件浏览</string>
    <string name="picture_center">相册</string>
    <string name="music_center">音乐</string>
    <string name="video_center">视频</string>
    <string name="tv_center">电视</string>
    <string name="game_center">游戏</string>
    <string name="app_center">应用</string>
    <string name="setting_center">设置</string>
    <string name="viptab_user_unvip">立即开通VIP看大片</string>
    <string name="viptab_user_vip">尊敬的VIP会员%1$s，您好</string>
    <string name="upgrade_dialog_title">秒速升级云视听极光</string>
    <string name="upgrade_dialog_btn_upgrade">一键升级</string>
    <string name="upgrade_dialog_btn_cancel">暂不</string>
    <string name="upgrade_fail_desc1">去应用商店下载试试吧</string>
    <string name="upgrade_fail_desc2">请到应用商店下载最新版本如有问题可以通过QQ群157525154联系我们吧</string>
    <string name="upgrade_check_fail">检查新版本失败</string>
    <string name="upgrade_new_already">已是最新版</string>
    <string name="upgrade_check_new">开始检测升级</string>
    <string name="video_player_error_network_disconnected_comm">检测到您的网络已断开</string>
    <string name="video_player_error_network_disconnected_extra_comm">请您正确设置网络连接</string>
    <string name="video_player_error_server_receiver_comm">暂时获取不到网络服务</string>
    <string name="video_player_error_server_exception_comm">当前服务异常</string>
    <string name="player_error_page_retry_text_comm">重试</string>
    <string name="player_error_page_setting_text_comm">设置</string>
    <string name="hello_world">Hello World</string>
    <string name="auth_fail_title">设备认证失败！</string>
    <string name="auth_login_fail_title">终端上线错误！</string>
    <string name="auth_deviceid_fail_title">终端mac地址激活错误！</string>
    <string name="auth_fail_msg_icntv">"错误码：%1$s
视频版本号：%2$s
MAC地址：%3$s
如有疑问请拨打客服电话：4000463366，QQ：800085092"</string>
    <string name="auth_fail_msg_cibn">"错误码：%1$s
视频版本号：%2$s
MAC地址：%3$s"</string>
    <string name="auth_fail_msg_snm">"错误码：%1$s
视频版本号：%2$s
MAC地址：%3$s"</string>
    <string name="timeline_shadow_height_percent">50.8%</string>
    <string name="timeline_shadow_width_percent">44.5%</string>
    <string name="timeline_shadow_marginLeft_percent">2.8%</string>
    <string name="timeline_shadow_marginTop_percent">5.6%</string>
    <string name="selectandsee_shadow_height_percent">58.4%</string>
    <string name="selectandsee_shadow_width_percent">51.7%</string>
    <string name="selectandsee_shadow_marginLeft_percent">3.30%</string>
    <string name="selectandsee_shadow_marginTop_percent">12.4%</string>
    <string name="movie_coming_shadow_height_percent">59.5%</string>
    <string name="movie_coming_shadow_width_percent">53.25%</string>
    <string name="movie_coming_shadow_marginLeft_percent">2.50%</string>
    <string name="movie_coming_shadow_marginTop_percent">8.9%</string>
    <string name="video_player_empty_time">00:00:00 / 00:00:00</string>
    <string name="video_player_loading">正在缓冲</string>
    <string name="video_player_loading_play">上次观看至%1$s</string>
    <string name="video_player_loading_play_second">按</string>
    <string name="video_player_loading_play_three">“确定”键从头播放</string>
    <string name="video_player_loading_prepare">缓冲</string>
    <string name="video_player_loading_network">0B/s</string>
    <string name="video_player_loading_title">即将播放 - %1$s</string>
    <string name="bg_video_pause_mind_press">按</string>
    <string name="bg_video_pause_mind_memu">菜单键</string>
    <string name="bg_video_pause_mind_definition">选择清晰度和集数</string>
    <string name="video_player_loading_live_title">正在直播 : %1$s</string>
    <string name="text_btn_refresh">刷新</string>
    <string name="detail_videos_unusual_toast">数据加载异常，请退出重新加载</string>
    <string name="player_video_unkown_title">未知视频</string>
    <string name="video_player_loading_start">已为您跳过片头</string>
    <string name="video_player_trailer_end">即将为您播放正片</string>
    <string name="video_player_loading_end">即将为您跳过片尾</string>
    <string name="player_menu_remind_text">按“菜单”选择清晰度和集数</string>
    <string name="player_menu_remind_text_live">按“菜单”选择清晰度</string>
    <string name="player_menu_definition_uhd_unsupport">您的设备不支持</string>
    <string name="player_menu_definition_login_tips">点击后登录观看</string>
    <string name="player_menu_proportion_original">原始比例</string>
    <string name="player_menu_proportion_full_screen">全屏</string>
    <string name="player_menu_see_total_video">观看正片</string>
    <string name="video_prepare_menu_tips">播放中按菜单键可选择清晰度和集数</string>
    <string name="vod_menu_tips_press">按遥控器</string>
    <string name="vod_menu_tips_menu">菜单键</string>
    <string name="vod_menu_tips_select">可选择清晰度和集数</string>
    <string name="bid_type_1">企鹅影院</string>
    <string name="bid_type_2">鼎级剧场</string>
    <string name="bid_type_3">腾讯体育</string>
    <string name="rotate_play_channel_not_exist">该频道内容不足</string>
    <string name="rotate_play_channel_need_pay_bid_1">这是企鹅影院会员频道</string>
    <string name="rotate_play_channel_need_pay_bid_2">这是鼎级剧场会员频道</string>
    <string name="rotate_play_channel_need_pay_bid_3">这是腾讯体育会员频道</string>
    <string name="rotate_play_channel_charge_tip">请到个人中心开通会员</string>
    <string name="rotate_play_channel_gointo">即将进入</string>
    <string name="video_player_error_appeal">申诉</string>
    <string name="video_player_error_quit">退出</string>
    <string name="player_error_copyright">暂时只对中国大陆地区提供服务</string>
    <string name="video_player_error_appeal_success">您的申诉已提交成功，我们会尽快帮您处理</string>
    <string name="video_player_error_appeal_repeat">您的申诉已成功提交过了！</string>
    <string name="video_player_error_appeal_failed">申诉提交失败，请您确认网络连接正常后重试</string>
    <string name="video_player_error_appeal_tips">由于版权限制只对大陆地区提供服务，您的位置是%1$s，如有误判请申诉</string>
    <string name="player_error_remind">播放器出错，请稍后重试</string>
    <string name="player_error_page_retry_text">重试</string>
    <string name="player_error_page_cancel_text">取消</string>
    <string name="player_error_page_feedback_text">去反馈</string>
    <string name="video_player_error_server">播放出错，检查网络链接后重试</string>
    <string name="video_player_error_network">未检测到网络连接，请确认网络连接是否正常</string>
    <string name="video_player_error_player">播放器出错了，请稍后重试</string>
    <string name="video_player_error_open_failed">播放出错，检查网络链接后重试</string>
    <string name="video_player_error_av_src">该节目暂时不能观看</string>
    <string name="video_player_error_cannot_play">无法播放</string>
    <string name="video_player_error_too_many_people_watch">当前节目观看人数太多</string>
    <string name="video_player_error_try_again_later">请稍后再试</string>
    <string name="video_player_error_officeial_download">请到官方渠道下载app</string>
    <string name="video_player_error_live_signal_interrupt">直播信号中断</string>
    <string name="video_player_error_live_not_start">当前节目尚未开始</string>
    <string name="video_player_error_live_already_end">当前节目已结束</string>
    <string name="video_player_error_av_unsupported">视频格式出错</string>
    <string name="video_player_error_live_id_error">直播ID错误</string>
    <string name="video_player_error_unkown">请您在个人中心反馈给我们</string>
    <string name="video_player_error_vip_auth_fail">会员鉴权失败</string>
    <string name="video_player_error_memory">内存不足导致播放出错</string>
    <string name="video_player_error_pls_clean_memory">请清理内存或重启设备</string>
    <string name="video_player_error_buffering">网速较慢，建议按下菜单键切换至较低分辨率</string>
    <string name="video_player_error_net_buffering">网速较慢，建议切换较低清晰度</string>
    <string name="video_player_error_device_unsupported">你的设备不支持播放此影片</string>
    <string name="video_player_error_http">播放出错，检查网络链接后重试</string>
    <string name="video_player_error_area">您所在地区无法观看该节目</string>
    <string name="video_player_error_over">当前节目已经结束</string>
    <string name="video_player_error_trylook_limit">试看次数达到上限</string>
    <string name="video_player_error_trylook_error">试看失败</string>
    <string name="video_player_error_pay">你正在观看付费节目，请购买后观看</string>
    <string name="video_player_error_not_started">直播暂未开始，请稍后观看</string>
    <string name="player_error_live_not_started_tips">当前直播预计%1$s开始</string>
    <string name="player_error_live_end_tips">直播已经结束，请返回观看其他节目</string>
    <string name="video_player_error_network_disconnected">检测到您的网络已断开</string>
    <string name="video_player_error_network_disconnected_extra">请您正确设置网络连接</string>
    <string name="video_player_error_server_receiver">暂时获取不到网络服务</string>
    <string name="video_player_error_server_exception">当前服务异常</string>
    <string name="video_player_error_server_loading">请稍等，正在加载</string>
    <string name="video_player_toast_live_play_end">直播已结束</string>
    <string name="video_player_error_reson_unknow">播放器未知错误</string>
    <string name="video_player_error_param_error">播放器参数错误</string>
    <string name="video_player_error_state_error">播放器状态错误</string>
    <string name="video_player_error_play_error">播放出错</string>
    <string name="video_player_error_check_retry">检查网络链接后重试</string>
    <string name="video_player_error_inner_error">内部错误</string>
    <string name="video_player_error_login_info_error">登录信息有误</string>
    <string name="video_player_error_relogin_in_center">请到个人中心重新登录</string>
    <string name="video_player_error_account_auth_failed">帐号鉴权失败</string>
    <string name="video_player_error_connect_error">连接异常</string>
    <string name="video_player_error_timeout">连接超时</string>
    <string name="feedback_title">遇到问题了？我们来帮您！</string>
    <string name="feedback_qrcode_remind">请使用微信扫描二维码</string>
    <string name="feedback_tips1">微信扫描二维码即可</string>
    <string name="feedback_tips2">· 查看常见问题问答</string>
    <string name="feedback_tips3">· 反馈您遇到的问题或建议</string>
    <string name="feedback_tips4">也欢迎您加入</string>
    <string name="feedback_tips5">用户体验QQ群：%1$s</string>
    <string name="feedback_tips6">您的宝贵意见是我们完善产品的最大动力！</string>
    <string name="feedback_subtitle">反馈您的意见、问题和建议</string>
    <string name="feedback_network_remind_title">二维码加载失败</string>
    <string name="feedback_network_remind_operation">请连接网络后重试</string>
    <string name="feedback_1">播放卡，没法用！</string>
    <string name="feedback_2">功能复杂，不好用！</string>
    <string name="feedback_3">操作不流畅，快优化吧！</string>
    <string name="feedback_4">程序总崩溃，跪了！</string>
    <string name="feedback_5">找不到想要的，抓狂！</string>
    <string name="feedback_6">整体不错，继续加油！</string>
    <string name="feedback_more">"反馈
更多"</string>
    <string name="feedback_prompt">如有其它意见或建议，请加入体验QQ群：%1$s，您的宝贵意见将帮助我们不断改进。</string>
    <string name="preview_watch">正在试看，</string>
    <string name="preview_click">点击</string>
    <string name="preview_confirm">键</string>
    <string name="preview_buy">付费看全片</string>
</resources>