<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/bg_layout" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/title" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/span_100" android:layout_marginTop="@dimen/span_100">
        <ImageView android:id="@id/back_icon" android:background="@drawable/transparent" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/left_normal" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/span_40" android:textStyle="bold" android:textColor="@color/white" android:id="@id/playset_title" android:background="@drawable/transparent" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_title" android:layout_toRightOf="@id/back_icon" android:layout_alignTop="@id/back_icon" />
        <TextView android:textSize="@dimen/span_30" android:textColor="@color/half_white_all" android:id="@id/playset_subtitle" android:background="@drawable/transparent" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_subtitle" android:layout_below="@id/playset_title" android:layout_alignLeft="@id/playset_title" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/feedback_layout" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/span_155" android:layout_marginTop="@dimen/span_120" android:layout_below="@id/title">
        <LinearLayout android:orientation="vertical" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:focusable="false" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_160">
                <TextView android:textSize="@dimen/span_40" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_1" android:background="@drawable/feedback_button_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/feedback_1" />
                <ImageView android:id="@id/feedback_img1" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/submitted" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:focusable="false" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_160" android:layout_marginTop="@dimen/span_10">
                <TextView android:textSize="@dimen/span_40" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_2" android:background="@drawable/feedback_button_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/feedback_2" />
                <ImageView android:id="@id/feedback_img2" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/submitted" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:focusable="false" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_160" android:layout_marginTop="@dimen/span_10">
                <TextView android:textSize="@dimen/span_40" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_3" android:background="@drawable/feedback_button_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/feedback_3" />
                <ImageView android:id="@id/feedback_img3" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/submitted" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/span_10">
            <RelativeLayout android:focusable="false" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_160">
                <TextView android:textSize="@dimen/span_40" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_4" android:background="@drawable/feedback_button_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/feedback_4" />
                <ImageView android:id="@id/feedback_img4" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/submitted" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:focusable="false" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_160" android:layout_marginTop="@dimen/span_10">
                <TextView android:textSize="@dimen/span_40" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_5" android:background="@drawable/feedback_button_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/feedback_5" />
                <ImageView android:id="@id/feedback_img5" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/submitted" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:focusable="false" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_160" android:layout_marginTop="@dimen/span_10">
                <TextView android:textSize="@dimen/span_40" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_6" android:background="@drawable/feedback_button_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/feedback_6" />
                <ImageView android:id="@id/feedback_img6" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/submitted" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout android:id="@id/feedback_more_layout" android:background="@drawable/feedback_button_selector" android:focusable="true" android:layout_width="@dimen/span_530" android:layout_height="@dimen/span_500" android:layout_marginLeft="@dimen/span_10">
            <TextView android:textSize="@dimen/span_80" android:textColor="@drawable/color_selector" android:gravity="center" android:id="@id/feedback_more" android:clickable="true" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/span_60" android:layout_marginTop="@dimen/span_45" android:text="@string/feedback_more" />
            <ImageView android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/span_50" android:layout_marginBottom="@dimen/span_50" android:src="@drawable/sel_right_arrow" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/span_20" android:textColor="@color/transparent_30" android:id="@id/prompt" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/span_60" android:text="@string/feedback_prompt" android:layout_below="@id/feedback_layout" android:layout_centerHorizontal="true" />
</RelativeLayout>