<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/activity_video_player_main_layout" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tencent.qqlivetv.model.videoplayer.QQVODView android:id="@id/animation_video_view" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.tencent.qqlivetv.model.recommendationview.RecommendationView android:id="@id/id_recommendation_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/video_prepare_layout" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/center_view" android:layout_width="@dimen/video_player_loading_center_view_width" android:layout_height="@dimen/video_player_loading_center_view_height" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/video_player_loading_network_text_size" android:textColor="@color/video_player_loading_network_dark_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_player_loading_prepare" android:layout_toLeftOf="@id/center_view" />
            <TextView android:textSize="@dimen/video_player_loading_network_text_size" android:textColor="@color/video_player_loading_network_dark_gray" android:id="@id/video_player_loading_network" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_player_loading_network" android:layout_toRightOf="@id/center_view" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/video_prepare_vod_title_text_size" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/video_prepare_title_text" android:layout_width="@dimen/video_prepare_title_text_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_prepare_title_text_margint_top" />
        <ImageView android:id="@id/video_prepare_loading_progress_bar" android:background="@drawable/video_prepare_loading_progress_bar_animation" android:layout_width="@dimen/video_prepare_progress_bar_width" android:layout_height="@dimen/video_prepare_progress_bar_height" />
        <TextView android:textSize="@dimen/video_prepare_menu_tips_text_size" android:textColor="@color/video_prepare_menu_tips_dark_gray" android:layout_gravity="center" android:id="@id/video_prepare_menu_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_prepare_menu_tips" />
    </LinearLayout>
    <com.tencent.qqlivetv.model.videoplayer.PlayerErrorView android:gravity="center" android:id="@id/player_error_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:id="@id/preview_video_bottom_layout" android:background="@color/player_overlayer_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/player_preivew_bottom_height">
        <TextView android:textSize="@dimen/video_remind_text_size" android:textColor="@color/white" android:ellipsize="end" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preview_watch" />
        <TextView android:textSize="@dimen/video_remind_text_size" android:textColor="@color/player_preivew_remind_textcolor" android:ellipsize="end" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/span_10" android:text="@string/preview_click" />
        <ImageView android:background="@drawable/player_dialog_enter_btn" android:layout_width="@dimen/dialog_player_image_width" android:layout_height="@dimen/dialog_player_image_width" />
        <TextView android:textSize="@dimen/video_remind_text_size" android:textColor="@color/player_preivew_remind_textcolor" android:ellipsize="end" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/span_10" android:text="@string/preview_confirm" />
        <TextView android:textSize="@dimen/video_remind_text_size" android:textColor="@color/white" android:ellipsize="end" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preview_buy" />
    </LinearLayout>
    <ViewStub android:gravity="center" android:layout_gravity="bottom" android:id="@id/stub_menu_tips" android:background="@color/player_overlayer_background" android:visibility="gone" android:layout="@layout/menu_tips_pic_layout" android:layout_width="@dimen/player_menu_tips_width" android:layout_height="@dimen/player_menu_tips_heigth" android:layout_marginLeft="@dimen/span_105" android:layout_marginBottom="@dimen/span_105" />
    <ImageView android:gravity="center" android:layout_gravity="bottom" android:id="@id/stub_trailer_tips" android:background="@drawable/trailer_tips" android:visibility="gone" android:layout_width="@dimen/player_trailer_tips_width" android:layout_height="@dimen/player_trailer_tips_height" android:layout_marginLeft="@dimen/player_trailer_tips_left_margin" />
    <ViewStub android:layout_gravity="bottom|center" android:id="@id/stub_vod_menu_tips_text" android:visibility="gone" android:layout="@layout/vod_menu_tips_text_layout" android:layout_width="wrap_content" android:layout_height="@dimen/vod_menu_tips_text_height" android:layout_marginBottom="@dimen/vod_menu_tips_text_margin_bottom" />
    <ViewStub android:layout_gravity="bottom" android:id="@id/stub_vod_menu_tips_animation" android:visibility="gone" android:layout="@layout/vod_menu_tips_animation_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>